# HaruDang

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env  k6-test.js  prometheus.yml
.github/workflows/: deploy.yml
BACKEND/: Dockerfile  pom.xml
BACKEND/src/main/java/com/example/HaruDang/: HaruDangApplication.java
BACKEND/src/main/java/com/example/HaruDang/config/: JpaConfig.java
BACKEND/src/main/resources/: application-dev.properties  application-prod.properties  application.properties
BACKEND/src/test/java/com/example/HaruDang/: HaruDangApplicationTests.java
BACKEND/src/test/java/com/example/HaruDang/dto/: TokenDto.java  (+1 more)
BACKEND/src/test/resources/: application-test.properties
FRONTEND/: index.html  package.json  vite.config.js
FRONTEND/public/: robots.txt  sitemap.xml
FRONTEND/src/: App.jsx
FRONTEND/src/api/: authApi.js  httpClient.js  userApi.js
FRONTEND/src/components/: DisclaimerPopup.css  DisclaimerPopup.jsx  Footer.css  Footer.jsx  LoginForm.jsx  RegisterForm.css  RegisterForm.jsx  SplitText.jsx  StaggeredMenu.css  StaggeredMenu.jsx
FRONTEND/src/context/: AuthContext.jsx
FRONTEND/src/hooks/: authCheck.js
FRONTEND/src/pages/: AboutPage.css  AboutPage.jsx  ChatAiPage.css  ChatAiPage.jsx  ChecklistPage.css  ChecklistPage.jsx  ContactPage.jsx  FirstTwoMonthsPage.jsx  HomePage.jsx  InfoPage.css  PetiquettePage.jsx  PreAdoptionPage.jsx  PrivacyPolicyPage.jsx  SocializationPage.jsx  TermsOfServicePage.jsx  TrainingGuidePage.jsx
LLM/: Agent.py  Dockerfile  Dto.py  Serve.py  pyproject.toml
NGINX/: default.conf  default.conf.template
(+35 files in other folders)
