[project]
name = "llm-prj"
version = "0.1.2"
description = "For Agent and Serve"
requires-python = ">=3.12"

dependencies = [
    "flagembedding>=1.2.9",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.7",
    "langdetect>=1.0.9",
    "langgraph>=1.0.0",
    "transformers>=4.40.2",
    "elasticsearch>=9.1.1",
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "langchain-huggingface>=1.2.0",
    "langserve>=0.3.3",
    "torch==2.9.1+cpu ; sys_platform == 'linux'",
    "torch==2.9.1 ; sys_platform == 'darwin'",
    "sse-starlette>=3.2.0",
]

[tool.uv]
index-strategy="unsafe-best-match"

[tool.uv.workspace]
members = [
    "llm_prj",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
